--- a/_includes/kesler_bio.html
+++ b/_includes/kesler_bio.html
@@ -1,6 +1,6 @@
 <div class="bio">
 	<img src="/images/kesler_profile.jpg" />
 	<p>Written on {{ page.date | date: "%B %d, %Y" }}<br>
-	<strong>Kesler Tanner</strong>, founder of Freelance Inbox
+	<strong>Kesler Tanner</strong>, Co-Founder of Freelance Inbox
 	</p>
 </div>
